fixed clarity issues

--- a/homework/homework_1/homework_1.tex
+++ b/homework/homework_1/homework_1.tex
@@ -117,7 +117,7 @@ For these problems, you should justify your answers. You do not need to provide 
         \noindent Proof by contraposition: 
         
         \begin{adjustwidth}{2em}{0em} 
-            Suppose $A \neq B \neq \varnothing$, where $ x \in A $ but $x \notin
+            Suppose $A \neq B$, $A \neq \varnothing$, $B \neq \varnothing$, where $ x \in A $ but $x \notin
             B$. 
             
             \noindent Then, $\{(x,b) : b \in B \} \subseteq (A \times B)$ and
@@ -163,7 +163,7 @@ For these problems, you should justify your answers. You do not need to provide 
 
         \item $ A - B = \{x : x \in A, x \notin B\} = \varnothing$
         
-        \noindent No $x$ in $A$ that's not in $B$. This is the definition of a
+        \noindent There is no $x$ in $A$ that's not in $B$. This is the definition of a
         subset. Thus, $A \subseteq B$. 
 
         \item $X$ is equal to every possible pairing of elements in A where an
