begun problem 1, with related images

--- a/homework/homework_2/homework_2.tex
+++ b/homework/homework_2/homework_2.tex
@@ -18,6 +18,7 @@
 \usepackage[framemethod=default]{mdframed}
 \usepackage{framed}
 \usepackage{setspace}
+\usepackage{graphicx}   
 \newmdenv[linecolor=NavyBlue,backgroundcolor=White]{myframe}
 \renewcommand\thesubfigure{(\Alph{subfigure})}
 \renewcommand\thesubfigure{(\Alph{subfigure})}
@@ -110,8 +111,97 @@ For these problems, you should justify your answers. You do not need to provide 
 \end{problem}
 
 \begin{soln}
-	
+    \phantom{ }
+	\begin{itemize}
+        \item $A$
+		\begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=12em]{media/A.png}
+			\item $\{(x,y) \in \mathbb R^2 : x^2 + y^2 \leq 6\}$
+		\end{enumerate}
+	    \item $B$
+	    \begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=12em]{media/B.png}
+			\item
+		\end{enumerate}
+
+		\phantom{ }
+
+	    \item $A \cup B$
+	    \begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=12em]{media/A_cup_B.png}
+			\item
+		\end{enumerate}
+	    \item $A \cap B$
+	    \begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=11em]{media/A_cap_B.png}
+			\item
+		\end{enumerate}
+		\item $A - B$
+	    \begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=11em]{media/A-B.png}
+			\item
+		\end{enumerate}
+		\item $B - A$
+	    \begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=10em]{media/B-A.png}
+			\item
+		\end{enumerate}
+		\item $\overline A$
+	    \begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=12em]{media/overlineA.png}
+			\item
+		\end{enumerate}
+		\item $\overline B$
+	    \begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=11em]{media/overlineB.png}
+			\item
+		\end{enumerate}
+		\item $\overline{A \cup B}$
+	    \begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=12em]{media/overlineA_cup_B.png}
+			\item
+		\end{enumerate}
+		\item $\overline{A \cap B}$
+		\begin{enumerate}
+			\item \phantom{ }
+			
+			\includegraphics[width=12em]{media/overlineA_cap_B.png}
+			\item
+		\end{enumerate}
+    \end{itemize}
 \end{soln}
+
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{problem}
 	For each $\alpha\in\R$, define $A_\alpha = \{(x,\alpha x)\in\R^2\,:\, -1\leq x\leq 1\}$.
