--- a/homework/homework_2/homework_2.tex
+++ b/homework/homework_2/homework_2.tex
@@ -125,7 +125,7 @@ For these problems, you should justify your answers. You do not need to provide 
 			\item \phantom{ }
 			
 			\includegraphics[width=12em]{media/B.png}
-			\item
+			\item $\{(x,y) \in \mathbb R^2 : y \geq x^2\}$
 		\end{enumerate}
 
 		\phantom{ }
@@ -135,56 +135,56 @@ For these problems, you should justify your answers. You do not need to provide 
 			\item \phantom{ }
 			
 			\includegraphics[width=12em]{media/A_cup_B.png}
-			\item
+			\item $\{(x,y) \in \mathbb R^2 : x^2 + y^2 \leq 6 \text{ or } y \geq x^2\}$
 		\end{enumerate}
 	    \item $A \cap B$
 	    \begin{enumerate}
 			\item \phantom{ }
 			
 			\includegraphics[width=11em]{media/A_cap_B.png}
-			\item
+			\item $\{(x,y) \in \mathbb R^2 : x^2 + y^2 \leq 6 \text{ and } y \geq x^2\}$
 		\end{enumerate}
 		\item $A - B$
 	    \begin{enumerate}
 			\item \phantom{ }
 			
 			\includegraphics[width=11em]{media/A-B.png}
-			\item
+			\item $\{(x,y) \in \mathbb R^2 : x^2 + y^2 \leq 6 \text{ and } y < x^2\}$
 		\end{enumerate}
 		\item $B - A$
 	    \begin{enumerate}
 			\item \phantom{ }
 			
 			\includegraphics[width=10em]{media/B-A.png}
-			\item
+			\item $\{(x,y) \in \mathbb R^2 : x^2 + y^2 > 6 \text{ and } y \geq x^2\}$
 		\end{enumerate}
 		\item $\overline A$
 	    \begin{enumerate}
 			\item \phantom{ }
 			
 			\includegraphics[width=12em]{media/overlineA.png}
-			\item
+			\item $\{(x,y) \in \mathbb R^2 : x^2 + y^2 > 6\}$
 		\end{enumerate}
 		\item $\overline B$
 	    \begin{enumerate}
 			\item \phantom{ }
 			
 			\includegraphics[width=11em]{media/overlineB.png}
-			\item
+			\item $\{(x,y) \in \mathbb R^2 : y < x^2\}$
 		\end{enumerate}
 		\item $\overline{A \cup B}$
 	    \begin{enumerate}
 			\item \phantom{ }
 			
 			\includegraphics[width=12em]{media/overlineA_cup_B.png}
-			\item
+			\item $\{(x,y) \in \mathbb R^2 : x^2 + y^2 > 6 \text{ and } y < x^2\}$
 		\end{enumerate}
 		\item $\overline{A \cap B}$
 		\begin{enumerate}
 			\item \phantom{ }
 			
 			\includegraphics[width=12em]{media/overlineA_cap_B.png}
-			\item
+			\item $\{(x,y) \in \mathbb R^2 : x^2 + y^2 > 6 \text{ or } y < x^2\}$
 		\end{enumerate}
     \end{itemize}
 \end{soln}
