--- a/homework/homework_2/homework_2.tex
+++ b/homework/homework_2/homework_2.tex
@@ -212,6 +212,17 @@ For these problems, you should justify your answers. You do not need to provide 
 \end{problem}
 
 \begin{soln}
+	\phantom{ }
+	\begin{enumerate}
+		\item This set can be described as a linear function with a slope of $\pi$ and a y-intercept of $0$
+		on the closed interval $[-1,1]$.
+
+		\item $\displaystyle\bigcup_{\alpha\in\R} A_\alpha = \{(x,y) \in \mathbb R^2 : x \in  [-1,1], (x = 0) \implies (y = 0)\}$
+		
+		\noindent $\displaystyle\bigcap_{\alpha\in\R} A_\alpha = \{(x,y) \in \{(0,0)\}\}$
+
+		
+	\end{enumerate}
 	
 \end{soln}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
