fixed double set, when should be one

--- a/homework/homework_2/homework_2.tex
+++ b/homework/homework_2/homework_2.tex
@@ -221,7 +221,7 @@ For these problems, you should justify your answers. You do not need to provide 
 		
 		% $\{(x,y) \in \mathbb R^2 : x \in  [-1,0) \text{ or } x \in (0,1]\} \cup {(0,0)}$
 		
-		\noindent $\displaystyle\bigcap_{\alpha\in\R} A_\alpha = \{\{(0,0)\}\}$
+		\noindent $\displaystyle\bigcap_{\alpha\in\R} A_\alpha = \{(0,0)\}$
 
 		
 	\end{enumerate}
