minor change to {(0,0)} set

--- a/homework/homework_2/homework_2.tex
+++ b/homework/homework_2/homework_2.tex
@@ -219,7 +219,7 @@ For these problems, you should justify your answers. You do not need to provide 
 
 		\item $\displaystyle\bigcup_{\alpha\in\R} A_\alpha = \{(x,y) \in \mathbb R^2 : x \in  [-1,1], \exists k (y = kx)\}$
 		
-		% $\{(x,y) \in \mathbb R^2 : x \in  [-1,0) \text{ or } x \in (0,1]\} \cup {(0,0)}$
+		% $\{(x,y) \in \mathbb R^2 : x \in  [-1,0) \text{ or } x \in (0,1]\} \cup \{(0,0)\}$
 		
 		\noindent $\displaystyle\bigcap_{\alpha\in\R} A_\alpha = \{(0,0)\}$
 
