--- a/homework/homework_2/homework_2.tex
+++ b/homework/homework_2/homework_2.tex
@@ -217,9 +217,10 @@ For these problems, you should justify your answers. You do not need to provide 
 		\item This set can be described as a linear function with a slope of $\pi$ and a y-intercept of $0$
 		on the closed interval $[-1,1]$.
 
-		\item $\displaystyle\bigcup_{\alpha\in\R} A_\alpha = \{(x,y) \in \mathbb R^2 : x \in  [-1,1], \exists k (y = kx)\}$
+		\item $\displaystyle\bigcup_{\alpha\in\R} A_\alpha = \{(x,y) \in \mathbb R^2 : x \in  [-1,0) \text{ or } x \in (0,1]\} \cup \{(0,0)\}$
 		
-		% $\{(x,y) \in \mathbb R^2 : x \in  [-1,0) \text{ or } x \in (0,1]\} \cup \{(0,0)\}$
+		% \{(x,y) \in \mathbb R^2 : x \in  [-1,1], \exists k (y = kx)\}
+		
 		
 		\noindent $\displaystyle\bigcap_{\alpha\in\R} A_\alpha = \{(0,0)\}$
 
