mended some wording

--- a/homework/homework_4/homework_4.tex
+++ b/homework/homework_4/homework_4.tex
@@ -263,8 +263,8 @@ $$\forall N\in\N,\exists X\in\mathscr P(\N),|X|\geq N$$
 		
 		\noindent $\frac{M}{\frac{a}{b}} = \frac{M}{a}b = \frac{|a|}{a}b = \pm b$
 
-		\noindent Thus, $\pm b \in \mathbb Z$ for all $a$ and $b$, where $a \neq 0$
-		and $b \neq 0$. 
+		\noindent Because $\pm b \in \mathbb Z$ for all $a$ and $b$, where $a \neq 0$
+		and $b \neq 0$, $\frac{M}{r}$ is also an integer.  
 	\end{enumerate}
 \end{soln}
 
