--- a/homework/homework_5/homework_5.tex
+++ b/homework/homework_5/homework_5.tex
@@ -58,7 +58,7 @@
 \headheight=14pt
 \pagestyle{fancy}
 \lhead{\emph{\textcolor{Gray}{Homework \#5}}}			%%  UPDATE THE VERSION HERE!!!
-\rhead{\emph{\textcolor{Gray}{}}}			%%  ENTER/DELETE YOUR NAME HERE!!!
+\rhead{\emph{\textcolor{Gray}{Seven Lewis}}}			%%  ENTER/DELETE YOUR NAME HERE!!!
 \chead{\emph{\textcolor{Gray}{MATH 309}}}
 \cfoot{\thepage}
 \renewcommand{\headrulewidth}{0.35pt}
@@ -114,7 +114,16 @@ For these problems, you should justify your answers. You do not need to provide 
 \end{problem}
 
 \begin{soln}
-	
+	\phantom{ }
+    \begin{enumerate}
+        \item $(26-5)^8$
+        \item $\frac{(26-5)!}{(25-5-8)!}$
+        \item $5 \cdot 26^7$
+        \item $5 \cdot \frac{(26-1)!}{(26-1-7)!}$
+        \item $26^8 - (26-5)^8$
+        \item $5 \cdot 8 \cdot \frac{(26-5)!}{(26-5-7)!}$
+        \item $\frac{(26-1)!}{(26-1-8)!} - \frac{(26-1-5)!}{(26-1-5-8)!}$
+    \end{enumerate}
 \end{soln}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -123,8 +132,20 @@ For these problems, you should justify your answers. You do not need to provide 
 \end{problem}
 
 \begin{soln}
-	
+	\phantom{ }
+
+    $\frac{13}{(13-2)!} \cdot {4 \choose 3} \cdot {4 \choose 2} = 1872$
 \end{soln}
+
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{problem}
@@ -132,7 +153,9 @@ For these problems, you should justify your answers. You do not need to provide 
 \end{problem}
 
 \begin{soln}
-	
+	\phantom{ }
+
+    ${16 \choose 2} \cdot 14! - \text{whenever 1 of the 5 sitting in the back} - \text{whenever one of the 4 siting in the front}$
 \end{soln}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
