--- a/homework/homework_5/homework_5.tex
+++ b/homework/homework_5/homework_5.tex
@@ -170,9 +170,11 @@ For these problems, you should justify your answers. You do not need to provide 
 
 	% $\text{front 5 and back 4 misplaced} = 16! - $
 
+	\noindent $\frac{1}{2} \cdot \text{pick 5 seats in the front} \cdot \text{pick 4 seats in the back}
+	\cdot \text{place rest (including empty seats)}$
 
-
-	$\frac{1}{2} \cdot (16! )$
+	\noindent $\frac{1}{2} \cdot (({8 \choose 5}\cdot 5!) \cdot ({8 \choose 4} \cdot 4!)
+	\cdot (16-(5+4))!) = 28,449,792,000$
 \end{soln}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
